--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 40px;
 
     overflow: hidden;
 }
@@ -117,4 +117,23 @@ h1{
         mix-blend-mode: normal;
         background: none;
     }
+}
+
+/* FOOTER */
+.footer-container{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+    z-index: 10;
+	width: 100%;
+	height: 40px;
+	background: #212121;
+    mix-blend-mode: multiply;
+}
+
+.footer-social-media{
+    float: left;
+    width: 30px;
+    margin: 5px 0 5px 5px;
+    cursor: pointer;
 }
