--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
     text-align: center;
     mix-blend-mode: multiply;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -113,27 +113,29 @@ h1{
     h1{
         font-size: 5em;
     }
+    @supports (mix-blend-mode: multiply){
+        .container{
+            mix-blend-mode: multiply;
+        }
+    }
     .container{
-        mix-blend-mode: normal;
+
         background: none;
     }
 }
 
 /* FOOTER */
-.footer-container{
-	position: absolute;
+footer{
+	position: fixed;
 	left: 0;
 	bottom: 0;
-    z-index: 10;
 	width: 100%;
 	height: 40px;
 	background: #212121;
     mix-blend-mode: multiply;
 }
-
 .footer-social-media{
     float: left;
     width: 30px;
     margin: 5px 0 5px 5px;
-    cursor: pointer;
 }
